Actualización del index.html, finalizacion de los stylos.css

--- a/practicas/portafolio/index.html
+++ b/practicas/portafolio/index.html
@@ -6,7 +6,8 @@
     <title>CrochetyDemos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/stylos.css">
@@ -54,7 +55,7 @@
                         <div class="thumb">
                             <img src="img/CitiaZorrita1-500x500.jpg" alt="amigurumi en forma de zorro.">
                         </div>
-                        <div class="descipcion">
+                        <div class="descripcion">
                             <p class="nombre">Cintia</p>
                             <p class="categoria">Amigurumi - Crochet - Ganchillo</p>
                         </div>
@@ -63,7 +64,7 @@
                         <div class="thumb">
                             <img src="img/NinfaNayades-500x500.jpg" alt="amigurumi en forma de ninfa ( hada).">
                         </div>
-                        <div class="descipcion">
+                        <div class="descripcion">
                             <p class="nombre">Ninfa Nayades</p>
                             <p class="categoria">Amigurumi - Crochet - Ganchillo</p>
                         </div>
@@ -72,7 +73,7 @@
                         <div class="thumb">
                             <img src="img/Angel3-500x500.jpg" alt="amigurumi en forma de angel.">
                         </div>
-                        <div class="descipcion">
+                        <div class="descripcion">
                             <p class="nombre">Angel</p>
                             <p class="categoria">Amigurumi - Crochet - Ganchillo</p>
                         </div>
@@ -81,7 +82,7 @@
                         <div class="thumb">
                             <img src="img/AriAlligator-500x500.jpg" alt="amigurumi en forma de lagarto.">
                         </div>
-                        <div class="descipcion">
+                        <div class="descripcion">
                             <p class="nombre">Ari Aligator</p>
                             <p class="categoria">Amigurumi - Crochet - Ganchillo</p>
                         </div>
@@ -91,8 +92,8 @@
                             <img src="img/Hornet7-500x500.jpg"
                                 alt="amigurumi hornet, personaje principal del juego hollow knight silksong.">
                         </div>
-                        <div class="descipcion">
-                            <p class="nombre">Hornet ( Hollow knight silksong )</p>
+                        <div class="descripcion">
+                            <p class="nombre">Hornet</p>
                             <p class="categoria">Amigurumi - Crochet - Ganchillo</p>
                         </div>
                     </div>
@@ -100,7 +101,7 @@
                         <div class="thumb">
                             <img src="img/Lili3-500x500.jpg" alt="amigurumi en forma de Hada.">
                         </div>
-                        <div class="descipcion">
+                        <div class="descripcion">
                             <p class="nombre">Lili</p>
                             <p class="categoria">Amigurumi - Crochet - Ganchillo</p>
                         </div>
@@ -109,8 +110,8 @@
                         <div class="thumb">
                             <img src="img/MantaApego5-500x500.jpg" alt="amigurumi en forma de conejo y manta de apego.">
                         </div>
-                        <div class="descipcion">
-                            <p class="nombre">Manta de apego y amigurumi conejito</p>
+                        <div class="descripcion">
+                            <p class="nombre">Manta de apego</p>
                             <p class="categoria">Amigurumi - Crochet - Ganchillo</p>
                         </div>
                     </div>
@@ -118,7 +119,7 @@
                         <div class="thumb">
                             <img src="img/Yani4-500x500.jpg" alt="amigurumi en forma de Flamingo.">
                         </div>
-                        <div class="descipcion">
+                        <div class="descripcion">
                             <p class="nombre">Yani</p>
                             <p class="categoria">Amigurumi - Crochet - Ganchillo</p>
                         </div>
@@ -132,7 +133,7 @@
         <div class="contenedor">
             <section class="contacto">
                 <h3 class="titulo">Contacto</h3>
-                <form type="text" action="">
+                <form class="formulario" type="text" action="">
                     <input type="text" placeholder="Nombre" name="nombre" required>
                     <input type="email" placeholder="Correo" name="correo" required>
                     <textarea name="mensaje" placeholder="Mensaje"></textarea>
@@ -144,7 +145,7 @@
         <section class="redes-sociales">
             <div class="contenedor">
                 <a href="https://www.instagram.com/crochetydemos/" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="https://x.com/CrocDemos"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://x.com/CrocDemos" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="https://www.facebook.com/crdemos/" class="facebook"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
                 <a href="https://www.youtube.com/@crochetydemos4374" class="youtube"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                 <a href="https://github.com/sorayapg" class="github"><i class="fa fa-github" aria-hidden="true"></i></a>
