actualizacin del css y creacion de pagina de acerca de

--- a/practicas/portafolio/index.html
+++ b/practicas/portafolio/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="contenedor">
             <nav class="menu">
-                <a href="#">Acerca de</a>
+                <a href="acercade.html">Acerca de</a>
                 <a href="#">Trabajos</a>
                 <a href="#">Contacto</a>
             </nav>
